examples/test/testpolicy484.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy484
  namespace: namespace168
spec:
  podSelector:
    matchLabels:
      key5: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value27
          key10: value43
      podSelector:
        matchLabels:
          key33: value26
          key30: value25
